tools/c7n_azure/tests/cassettes/NetworkSecurityGroupTest.test_find_by_name.json
{
    "version": 1,
    "interactions": [
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-12-01",
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "content-type": [
                        "application/json; charset=utf-8"
                    ],
                    "date": [
                        "Thu, 02 May 2019 19:33:04 GMT"
                    ],
                    "content-length": [
                        "15519"
                    ],
                    "x-ms-original-request-ids": [
                        "7d92b45f-a521-481c-ad95-3c4f133bebf9",
                        "0d1a98bd-8e32-4550-a10a-525b490076fc"
                    ],
                    "cache-control": [
                        "no-cache"
                    ]
                },
                "body": {
                    "data": {
                        "value": [
                            {
                                "name": "c7n-nsg",
                                "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg",
                                "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "eastus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "94a0c0a4-cdba-45b0-b2b1-b6f602d8981e",
                                    "securityRules": [
                                        {
                                            "name": "test1",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test1",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "80",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test2",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test2",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 310,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [
                                                    "8080-8084",
                                                    "8086"
                                                ],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test3",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test3",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "8086",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 290,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test4",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test4",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 320,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test5",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test5",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test6",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test6",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "88-90",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 330,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"43c55c3f-9e73-42cb-9219-35e045ed9ce0\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ]
                                }
                            },
                            {
                                "name": "k8s-master-C02B7042-nsg",
                                "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg",
                                "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "southcentralus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "6274b384-dcb7-492d-812a-8334d987d735",
                                    "securityRules": [
                                        {
                                            "name": "allow_ssh",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/securityRules/allow_ssh",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow SSH traffic to master",
                                                "protocol": "Tcp",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22-22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 101,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "allow_kube_tls",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/securityRules/allow_kube_tls",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow kube-apiserver (tls) traffic to master",
                                                "protocol": "Tcp",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "443-443",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 100,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-C02B7042-nsg/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"d32218c3-fbf3-4da7-9fb6-8d656dca2874\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "subnets": [
                                        {
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_containerservice/providers/Microsoft.Network/virtualNetworks/k8s-vnet-C02B7042/subnets/k8s-subnet"
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        }
    ]
}
